Fixed text covering map

--- a/css/map.css
+++ b/css/map.css
@@ -19,6 +19,7 @@ text {
 
 .region-name {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
 }
 
 #scale {
